# Convex-Hull

./: CMakeLists.txt  README.md  main.cpp
geometry2D/: CMakeLists.txt  GJK.cpp  GJK.hpp  consts.hpp  graham.cpp  graham.hpp  objects_2D.cpp  objects_2D.hpp
parse_read/: CMakeLists.txt  parse_arguments.cpp  parse_arguments.hpp  read_points.cpp  read_points.hpp
points/: A.txt  B.txt
py_script/: Conex_hull.ipynb
